# mobilerun

./: .gitignore  ANALYSIS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SKILL.md  mobilerun_api.py  mobilerun_demo.py  pyproject.toml  start.sh
compat/: pyproject.toml
compat/droidrun/: __init__.py  __main__.py  cli_shim.py
compat/droidrun/macro/: __init__.py  __main__.py
data/: agents.json  checkpoints.db  checkpoints.db-shm  checkpoints.db-wal  tasks.json
data/chats/: 0afa4d16.json
data/chroma_db/: chroma.sqlite3
data/rag_documents/: 0017ecf2_test_seeta_policy.txt  be025a92_test_seeta_policy.txt
data/task_logs/: 0290d563.jsonl  04500f56.jsonl  04ca1688.jsonl  0606cbc4.jsonl  06fb64aa.jsonl  08f91dbd.jsonl  0a06733b.jsonl  0b27cf0a.jsonl  0bba84f7.jsonl  0c5789dd.jsonl  0f4c0004.jsonl  0f769396.jsonl  0ff5d4de.jsonl  12730a26.jsonl  14360bcc.jsonl  1746057b.jsonl  17e65c32.jsonl  17eaf999.jsonl  182f0eb2.jsonl  1ee5bdd4.jsonl  1f05a6eb.jsonl  1f9b66e6.jsonl  226c1dc5.jsonl  2337c845.jsonl  2389b221.jsonl  23b15b3d.jsonl  24d71a61.jsonl  2529948d.jsonl  25446be9.jsonl  2637984e.jsonl  26d6733a.jsonl  2892955f.jsonl  2d0315d6.jsonl  2fdd7864.jsonl  33e4e511.jsonl  359ba5a5.jsonl  35c9ae7e.jsonl  3690f4aa.jsonl  37cc5a39.jsonl  39a6be81.jsonl  (+128 more)
docs/: docs.json  overview.mdx  quickstart.mdx
docs/concepts/: architecture.mdx  events-and-workflows.mdx  prompts.mdx  shared-state.mdx
docs/features/: app-cards.mdx  credentials.mdx  custom-tools.mdx  custom-variables.mdx  structured-output.mdx  telemetry.mdx  tracing.mdx
docs/guides/: cli.mdx  device-setup.mdx  docker.mdx  overview.mdx
docs/sdk/: adb-tools.mdx  base-tools.mdx  configuration.mdx  droid-agent.mdx  ios-tools.mdx  reference.mdx
mobilerun/: __init__.py  __main__.py  config_example.yaml  log_handlers.py  portal.py
mobilerun/agent/: __init__.py  action_context.py  tool_registry.py  usage.py
mobilerun/agent/droid/: __init__.py  droid_agent.py  events.py  state.py
mobilerun/agent/executor/: __init__.py  events.py  executor_agent.py
mobilerun/agent/fast_agent/: __init__.py  events.py  fast_agent.py  xml_parser.py
mobilerun/agent/manager/: __init__.py  events.py  manager_agent.py  prompts.py  stateless_manager_agent.py
mobilerun/agent/oneflows/: app_starter_workflow.py  structured_output_agent.py
mobilerun/agent/providers/: __init__.py  registry.py  setup_service.py  types.py
mobilerun/agent/tools/: __init__.py  wechat.py
mobilerun/agent/trajectory/: __init__.py  writer.py
mobilerun/agent/utils/: __init__.py  actions.py  chat_utils.py  inference.py  llm_loader.py  llm_picker.py  prompt_resolver.py  signatures.py  tracing_setup.py  trajectory.py
mobilerun/app_cards/providers/: __init__.py  composite_provider.py  local_provider.py  server_provider.py
mobilerun/cli/: __init__.py  configure_prompts.py  configure_wizard.py  device_commands.py  doctor.py  event_handler.py  logs.py  main.py  oauth_actions.py
mobilerun/cli/tui/: __init__.py  app.py
mobilerun/config/: credentials_example.yaml
mobilerun/config/app_cards/: README.md  app_cards.json  wechat.md
mobilerun/config_manager/: __init__.py  config_manager.py  credential_paths.py  env_keys.py  loader.py  path_resolver.py
mobilerun/config_manager/migrations/: __init__.py  v004_remove_deprecated_agents.py  v005_remove_external_agents.py  v006_disabled_tools_default_sentinel.py
mobilerun/credential_manager/: __init__.py  file_credential_manager.py
mobilerun/macro/: __init__.py  __main__.py  cli.py  handoff.py  matcher.py  recorder.py  replay.py  state.py
mobilerun/mcp/: __init__.py  adapter.py  client.py
mobilerun/memory/: __init__.py  memory_store.py
mobilerun/skills/: __init__.py  loader.py  python_skill.py  registry.py  skill.py
mobilerun/tasks/: __init__.py  models.py  queue.py
mobilerun/telemetry/: __init__.py  events.py  langfuse_processor.py  phoenix.py  tracker.py
mobilerun/tools/: __init__.py
mobilerun/tools/android/: portal_client.py
mobilerun/tools/driver/: __init__.py  android.py  base.py  cloud.py  ios.py  recording.py  stealth.py  visual_remote.py
mobilerun/tools/filters/: base.py  concise_filter.py  detailed_filter.py
mobilerun/tools/formatters/: __init__.py  base.py  indexed_formatter.py
mobilerun/tools/helpers/: __init__.py  element_search.py  geometry.py  images.py
server/: app.py  db.py  main.py  models.py  scheduler.py  state.py  storage.py
server/api/: agents.py  chat.py  chat_bot.py  devices.py  rag.py  scheduled_tasks.py  tasks.py  ws.py
server/langgraph/: chat_bot_agent.py  chat_bot_config.py  chat_bot_prompts.py  device_agent.py  dialogue_agent.py  tools.py  utils.py
server/rag/: __init__.py  agent.py  chat_engine.py  document_parser.py  embedding.py  language_detector.py  retriever.py  text_splitter.py  vectorstore.py
server/websocket/: __init__.py  log_handler.py  manager.py
tests/: test_anthropic_oauth_llm.py  test_app_cards.py  test_cloud_driver_sdk.py  test_fast_agent_xml_parser.py  test_macro_guarded_replay.py  test_macro_recording_actions.py  test_macro_state_matcher.py  test_macro_v2_schema.py  test_portal_asset_selection.py  test_rag.py  test_type_action.py  test_vision_only_run_cli.py  test_visual_remote_connection.py
web/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
(+54 files in other folders)
