[project]
name = "mobilerun"
version = "0.6.1"
description = "A framework for controlling mobile devices through LLM agents"
authors = [{ name = "Niels Schmidt", email = "niels@droidrun.ai" }]
dependencies = [
    "async_adbutils",
    "llama-index==0.14.4",
    "posthog>=6.7.6",
    "pydantic>=2.11.10",
    "rich>=14.1.0",
    "InquirerPy>=0.3.4",
    "arize-phoenix>=12.3.0",
    "httpx>=0.27.0",
    "llama-index-callbacks-arize-phoenix>=0.6.1",
    "llama-index-workflows>=2.16.0,<3.0.0",
    "aiofiles>=25.1.0",
    "textual>=6.11.0",
    "mcp>=1.26.0",
    "llama-index-llms-openai>=0.6.0",
    "llama-index-llms-openai-like>=0.6.0",
    "llama-index-llms-google-genai>=0.8.5",
    "llama-index-llms-ollama>=0.7.2",
    "llama-index-llms-openrouter>=0.4.2",
    "mobilerun-sdk>=3.2.0",
]
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Emulators",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/droidrun/mobilerun"
"Bug Tracker" = "https://github.com/droidrun/mobilerun/issues"
Documentation = "https://docs.mobilerun.ai/"

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.67.0",
    "llama-index-llms-anthropic>=0.8.6,<0.9.0",
]
dev = [
    "black==25.9.0",
    "ruff>=0.13.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "bandit>=1.8.6",
    "safety>=3.2.11",
    "mobilerun[langfuse]",
]
langfuse = [
    "langfuse==3.12.1",
    "openinference-instrumentation-llama-index>=3.0.0",
    "llama-index-instrumentation"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mobilerun"]

[project.scripts]
mobilerun = "mobilerun.cli.main:cli"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]
ignore = ["E501"]

[[tool.pydoc-markdown.loaders]]
type = "python"
packages = ["mobilerun"]
modules = ["mobilerun"]

[[tool.pydoc-markdown.processors]]
type = "filter"
documented_only = false
do_not_filter_modules = true
skip_empty_modules = true

[[tool.pydoc-markdown.processors]]
type = "smart"

[[tool.pydoc-markdown.processors]]
type = "crossref"

[tool.pydoc-markdown.renderer]
type = "hugo"
build_directory = "docs"
content_directory = "v4/sdk"
clean_render = true


[tool.pydoc-markdown.renderer.markdown]
classdef_with_decorators = false
signature_with_decorators = false
data_code_block = true
descriptive_class_title = false
render_module_header = false
format_code_style = "facebook"
add_module_prefix = false
add_method_class_prefix = true

header_level_by_type = { Module = 1, Class = 2, Method = 4, Function = 4, Variable = 4 }


[[tool.pydoc-markdown.renderer.pages]]
title = "DroidAgent"
name = "droid-agent"
contents = [
    "mobilerun.agent.droid.droid_agent.MobileAgent",
    "mobilerun.agent.droid.droid_agent.MobileAgent.__init__",
    "mobilerun.agent.droid.droid_agent.MobileAgent.run",
]

[[tool.pydoc-markdown.renderer.pages]]
title = "Tools"
name = "base-tools"
contents = [
    "mobilerun.tools.tools.Tools.*",
    "mobilerun.tools.tools.describe_tools",
]

[[tool.pydoc-markdown.renderer.pages]]
title = "AdbTools"
name = "adb-tools"
contents = ["mobilerun.tools.adb.AdbTools.*"]

[[tool.pydoc-markdown.renderer.pages]]
title = "IOSTools"
name = "ios-tools"
contents = ["mobilerun.tools.ios.IOSTools.*"]

[[tool.pydoc-markdown.renderer.pages]]
title = "CloudTools"
name = "cloud-tools"
contents = ["mobilerun.tools.cloud.MobileRunTools.*"]

[dependency-groups]
dev = [
    "arize-phoenix>=11.32.1",
    "bandit>=1.8.6",
    "llama-index-callbacks-arize-phoenix>=0.6.1",
    "pytest>=8.0.0",
    "ruff>=0.13.0",
    "safety>=3.2.11",
]
